KS:M fixed horizontal scrollbar

--- a/keyscore-manager/src/app/pipelines/pipeline-editor/pipely/style/pipely-style.css
+++ b/keyscore-manager/src/app/pipelines/pipeline-editor/pipely/style/pipely-style.css
@@ -15,6 +15,9 @@
 
 }
 
+.workspace{
+}
+
 .dropzone-workspace {
 position:relative;
     height:100%;
