--- a/keyscore-manager/src/app/style/style.css
+++ b/keyscore-manager/src/app/style/style.css
@@ -288,17 +288,17 @@
 
 }
 
+.row{
+    margin-left:0;
+    margin-right:0;
+}
+
 /*-------side bar------------*/
 .wrapper {
     display: flex;
     align-items: stretch;
-}
-
-#content {
-    width: 100%;
-    padding: 20px;
-    min-height: 100vh;
-    transition: all 0.3s;
+    position:relative;
+    height:100vh;
 }
 
 #sidebar {
